--- a/starGirl.html
+++ b/starGirl.html
@@ -7,6 +7,7 @@
     <script src="js/commonFunctions.js"></script>
     <script src="js/stars.js"></script>
 </head>
+<!--初始化时要调用的函数-->
 <body onload = "init()">
     <div>
         <canvas id="canvas" width="800" height="600"></canvas>
